prevent logo stretching.

--- a/2013/sass/_modules/_box.scss
+++ b/2013/sass/_modules/_box.scss
@@ -173,7 +173,7 @@ height: 100%;
 
 .box_map {
   position: relative;
-  background: #5cba93;
+  background: #42474b;
   padding: 0;
   margin: 24px;
   &> .box__header {
