--- a/2013/sass/_modules/_nav-bar.scss
+++ b/2013/sass/_modules/_nav-bar.scss
@@ -17,7 +17,7 @@
     line-height: 88px;
     height: 88px;
     &:hover {
-      background-color: #5cba93;
+      background-color: #42474b;
     }
   }
   .nav__link_two-lines {
