--- a/2014/sass/utilities.scss
+++ b/2014/sass/utilities.scss
@@ -179,7 +179,7 @@
 
 .circle_large {
   overflow: hidden;
-  background: #5cba93;
+  background: #42474b;
   width: 156px;
   height: 156px;
   display: inline-block;
